# midi-multistream2usbdev

./: .gitmodules  CMakeLists.txt  README.md  main.c  midi-multstream2usbdev-4x4-release.uf2  midi-multstream2usbdev-6x6.uf2  midi_device_multistream.c  midi_device_multistream.h  tusb_config.h  usb_descriptors.c
